--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
 	<link href="https://fonts.googleapis.com/css?family=Nunito|Open+Sans" rel="stylesheet">
 	<link rel="stylesheet" href="https://wavetweak.com/vendor/font-awesome-4.7.0/css/font-awesome.min.css">
 	
-<script type="application/javascript">
-var doNotTrack = false;
-if (!doNotTrack) {
+	<script type="application/javascript">
+	var doNotTrack = false;
+	if (!doNotTrack) {
 	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 	})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 	ga('create', 'UA-178660825-2', 'auto');
 	
-	ga('send', 'pageview');
-}
-</script>
+		ga('send', 'pageview');
+	}
+	</script>
 
 
 
@@ -58,7 +58,7 @@ if (!doNotTrack) {
 
 	<h1>Wavetweak</h1>
 	<p>Redefining the music industry by providing cutting-edge AI algorithms.</p>
-	<form action="//my-account.mailchimp.com/my-subscriber-url" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+	<form action="https://app.99inbound.com/api/e/7IThDBwy" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
 	<input type="email" placeholder="Enter email to signup" value="" name="EMAIL" class="required email" id="mce-EMAIL">
 	<input type="submit" value="Sign Up" name="subscribe" id="mc-embedded-subscribe" class="button">
 </form>
