--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 	<h1>Wavetweak</h1>
 	<p>Redefining the music industry by providing cutting-edge AI algorithms.</p>
-	<form action="https://app.99inbound.com/api/e/7IThDBwy" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
+	<form action="https://app.99inbound.com/api/e/UfPCELX1" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
 	<input type="email" placeholder="Enter email to signup" value="" name="EMAIL" class="required email" id="mce-EMAIL">
 	<input type="submit" value="Sign Up" name="subscribe" id="mc-embedded-subscribe" class="button">
 </form>
@@ -69,7 +69,6 @@
 			<div>
 				<h2><i class="fa fa-play"></i>Ultimate remix tool</h2>
 				<p>Convert any song to Ableton project. Intelligent sample extraction, effect chain reversal and smart parameter search.</p>
-
 			</div>
 		
 	
@@ -89,7 +88,6 @@
 			</div>
 		
 	
-		
 	
 	</div>
 </body>
